fixes #932 + sign on Safari is not rendered correctly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -393,7 +393,7 @@ div#run_distribution {
 #hostclasses, #classes{
   width: 320px;
   vertical-align: top;
-
+  float: left;
 }
 #hostclasses, #classes li, #classes li a {
   list-style-type: none;
@@ -401,7 +401,7 @@ div#run_distribution {
   text-decoration: none;
 }
 
-#classes .puppetclass a, .puppetclass li a {
+.puppetclass a, .puppetclass li a {
   color: #333;
   float: right;
   margin-right: 10px;
